--- a/diffstat/diffstat.1
+++ b/diffstat/diffstat.1
@@ -1,5 +1,5 @@
 .\"*****************************************************************************
-.\" Copyright 1994-2009,2010 by Thomas E. Dickey                               *
+.\" Copyright 1994-2018,2019 by Thomas E. Dickey                               *
 .\" All Rights Reserved.                                                       *
 .\"                                                                            *
 .\" Permission to use, copy, modify, and distribute this software and its      *
@@ -18,7 +18,11 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR *
 .\" IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.                *
 .\"*****************************************************************************
-.\" $Id: diffstat.1,v 1.30 2012/01/02 19:20:26 tom Exp $
+.\" $Id: diffstat.1,v 1.40 2019/11/29 01:34:39 tom Exp $
+.ie \n(.g .ds `` \(lq
+.el       .ds `` ``
+.ie \n(.g .ds '' \(rq
+.el       .ds '' ''
 .TH DIFFSTAT 1
 .SH NAME
 \fBdiffstat\fP \- make histogram from diff-output
@@ -27,17 +31,24 @@
 .SH DESCRIPTION
 This program reads the output of \fBdiff\fP and displays a histogram
 of the insertions, deletions, and modifications per-file.
-Diffstat is a program that is useful for reviewing large, complex patch files.
+\fBDiffstat\fP is a program that is useful for reviewing large,
+complex patch files.
 It reads from one or more input files which contain output from \fBdiff\fP,
 producing a histogram of the total lines changed for each file referenced.
 .PP
-If the input filename ends with .bz2, .gz, .lzma, .z or .Z,
-diffstat will read the
+If the input filename ends with
+\*(``.bz2\*('',
+\*(``.gz\*('',
+\*(``.lzma\*('',
+\*(``.xz\*('',
+\*(``.z\*('' or
+\*(``.Z\*('',
+\fBdiffstat\fP will read the
 uncompressed data via a pipe from the corresponding program.
 It also can infer the compression type from files piped via the standard input.
 .PP
-Diffstat recognizes the most popular types of output from diff:
-.RS
+\fBDiffstat\fP recognizes the most popular types of output from \fBdiff\fP:
+.RS 3
 .TP
 unified
 preferred by the \fBpatch\fP utility.
@@ -60,7 +71,7 @@ If no filename is given on the command line,
 .SH OPTIONS
 .TP
 .B \-b
-ignore lines matching "Binary files XXX and YYY differ" in the diff
+ignore lines matching "Binary files XXX and YYY differ" in the \fBdiff\fP
 .TP
 .B \-c
 prefix each line of output with "#", making it a comment-line for shell
@@ -79,8 +90,16 @@ to obtain the total number of lines in each file.
 The remainder, after subtracting modified and deleted lines,
 is shown as "unchanged lines".
 .TP
+.B \-d
+The debug prints a lot of information.
+It is normally compiled-in, but can be suppressed.
+.TP
 .BI \-e " file"
 redirect standard error to \fIfile\fR.
+.TP
+.B \-E
+strip out ANSI escape sequences on each line before parsing the differences.
+This allows \fBdiffstat\fP to be used with \fBcolordiff\fP.
 .TP
 .BI \-f " format"
 specify the format of the histogram.
@@ -112,6 +131,14 @@ prints the usage message and exits.
 .B \-k
 suppress the merging of filenames in the report.
 .TP
+.B \-K
+attempt to improve the annotation of "only" files
+by looking for a match in the resulting set of files and
+inferring whether the file was added or removed.
+.IP
+This does not currently work in combination with \fB\-R\fP because
+\fBdiffstat\fP maintains only the resulting set of files.
+.TP
 .B \-l
 lists only the filenames.
 No histogram is generated.
@@ -136,6 +163,10 @@ redirect standard output to \fIfile\fR.
 .BI \-p " number"
 override the logic that strips common pathnames, simulating the \fBpatch\fP
 "\-p" option.
+.IP
+If you do not give a \fB\-p\fP option, \fBdiffstat\fP examines the
+differences and strips the common prefix from the pathnames.
+This is not what \fBpatch\fP does.
 .TP
 .B \-q
 suppress the "0 files changed" message for empty diffs.
@@ -162,7 +193,7 @@ those would normally be rounded to zero.
 .B \-R
 Assume patch was created with old and new files swapped.
 .TP
-.BI \-s
+.B \-s
 show only the summary line, e.g., number of insertions and deletions.
 .TP
 .BI \-S " source"
@@ -171,7 +202,21 @@ the original files (before applying differences) can be found.
 .TP
 .B \-t
 overrides the histogram,
-generates output of comma separated values.
+generates output of comma separated values for the number of
+changed lines found in the differences for each file:
+inserted, deleted and modified.
+.IP
+If \fB\-S\fP or \fB\-D\fP options are given, the number of unchanged
+lines precedes the number of changes.
+.TP
+.B \-T
+prints the numbers that the \fB\-t\fP option would show,
+between the pathname and histogram.
+.IP
+The width of the number of changes is determined
+by the largest value (but at least 3).
+The width given in the \fB\-w\fP option is separate from the width of these
+numbers.
 .TP
 .B \-u
 suppress the sorting of filenames in the report.
@@ -188,9 +233,13 @@ prints the current version number and exits.
 specify the maximum width of the histogram.
 The histogram will never be shorter than 10 columns,
 just in case the filenames get too large.
+.IP
+The default is 80 columns,
+unless the output is to a terminal.
+In that case, the default width is the terminal's width.
 .SH ENVIRONMENT
 .PP
-\fBDiffstat\fP runs in a portable UNIX\*R environment.
+\fBDiffstat\fP runs in a POSIX environment.
 .PP
 You can override the compiled-in paths of programs used for decompressing
 input files by setting environment variables corresponding to their name:
@@ -216,9 +265,10 @@ same command-line options, e.g., "\-c" to decompress to the standard output.
 \fBDiffstat\fP is a single binary module, which uses no auxiliary files.
 .SH BUGS
 .PP
-\fBDiffstat\fP makes a lot of assumptions about the format of a \fBdiff\fP file.
+\fBDiffstat\fP makes a lot of assumptions
+about the format of \fBdiff\fP's output.
 .PP
-There is no way to obtain a filename from the standard diff between
+There is no way to obtain a filename from the standard \fBdiff\fP between
 two files with no options.
 Context diffs work,
 as well as unified diffs.
@@ -229,7 +279,8 @@ There's no easy way to determine the degree of overlap between the
 to approximate modified lines for the \fB\-m\fP option.
 .SH SEE ALSO
 .PP
-.BR diff (1).
+.BR diff (1),
+.BR patch (1).
 .SH AUTHOR
 .PP
 Thomas Dickey <dickey@invisible-island.net>.
