--- a/diffstat/package/debian/changelog
+++ b/diffstat/package/debian/changelog
@@ -1,3 +1,58 @@
+diffstat (1.64) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 11 Jan 2021 04:10:59 -0500
+
+diffstat (1.63) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Sun, 24 Nov 2019 13:02:47 -0500
+
+diffstat (1.62) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Tue, 14 Aug 2018 20:24:27 -0400
+
+diffstat (1.61) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Tue, 05 Jan 2016 19:51:23 -0500
+
+diffstat (1.60) unstable; urgency=low
+
+  * handle quoted files from diffutils 3.3
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 06 Jul 2015 19:27:58 -0400
+
+diffstat (1.59) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Thu, 05 Jun 2014 17:12:15 -0400
+
+diffstat (1.58) unstable; urgency=low
+
+  * maintenance updates
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 28 Oct 2013 17:40:54 -0400
+
+diffstat (1.57) unstable; urgency=low
+
+  * fix for diff 2.8.4 "Binary" message
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Mon, 15 Apr 2013 20:48:36 -0400
+
+diffstat (1.56) unstable; urgency=low
+
+  * Configure-script updates
+  * Debian #675475
+
+ -- Thomas E. Dickey <dickey@invisible-island.net>  Tue, 03 Jan 2012 04:39:50 -0500
+
 diffstat (1.55) unstable; urgency=low
 
   * Add -R option.
