--- a/diff/diff.1
+++ b/diff/diff.1
@@ -30,7 +30,7 @@
 .\"     @(#)diff.1	8.1 (Berkeley) 6/30/93
 .\" $FreeBSD$
 .\"
-.Dd March 10, 2022
+.Dd September 8, 2022
 .Dt DIFF 1
 .Os
 .Sh NAME
@@ -43,6 +43,7 @@
 .Fl c | e | f |
 .Fl n | q | u | y
 .Oc
+.Op Fl A Ar algo | Fl -algorithm Ar algo
 .Op Fl -brief
 .Op Fl -color Ns = Ns Ar when
 .Op Fl -changed-group-format Ar GFMT
@@ -70,6 +71,7 @@
 .Ar file1 file2
 .Nm diff
 .Op Fl aBbdilpTtw
+.Op Fl A Ar algo | Fl -algorithm Ar algo
 .Op Fl I Ar pattern | Fl -ignore-matching-lines Ar pattern
 .Op Fl F Ar pattern | Fl -show-function-line Ar pattern
 .Op Fl L Ar label | Fl -label Ar label
@@ -98,6 +100,7 @@
 .Ar file1 file2
 .Nm diff
 .Op Fl aBbdiltw
+.Op Fl A Ar algo | Fl -algorithm Ar algo
 .Op Fl I Ar pattern | Fl -ignore-matching-lines Ar pattern
 .Op Fl -brief
 .Op Fl -color Ns = Ns Ar when
@@ -124,6 +127,7 @@
 .Ar file1 file2
 .Nm diff
 .Op Fl aBbdilpTtw
+.Op Fl A Ar algo | Fl -algorithm Ar algo
 .Op Fl I Ar pattern | Fl -ignore-matching-lines Ar pattern
 .Op Fl F Ar pattern | Fl -show-function-line Ar pattern
 .Op Fl L Ar label | Fl -label Ar label
@@ -156,6 +160,7 @@
 .Fl c | e | f |
 .Fl n | q | u
 .Oc
+.Op Fl A Ar algo | Fl -algorithm Ar algo
 .Op Fl -brief
 .Op Fl -color Ns = Ns Ar when
 .Op Fl -changed-group-format Ar GFMT
@@ -334,6 +339,27 @@ Files differ and only the second file contains the line.
 .Pp
 Comparison options:
 .Bl -tag -width Ds
+.It Fl A Ar algo, -algorithm Ar algo
+Configure the algorithm used when comparing files.
+.Nm
+supports 3 algorithms:
+.Pp
+.Bl -tag -width Ds -compact
+.It Cm myers
+Myers diff algorithm performs a O(ND) comparison between the two files.
+An optimisation is present when worst case files are detected it causes the
+Myers algorithm to bails out and produces correct, but non-optimal diff output.
+.It Cm patience
+The patience variant of the Myers algorithm, this variant attempts to create
+more aesthetically pleasing diff output by logically grouping lines.
+.It Cm stone
+The Stone algorithm looks for the longest common subsequence between compared files.
+Stone encounters worst case performance when there are long common subsequences.
+In large files this can lead to a significant performance impact.
+The Stone algorithm is maintained for compatibility.
+.El
+Diff defaults the algorithm to Myers diff, but will fall back to the Stone
+algorithm if the input or output options are not supported by libdiff.
 .It Fl a -text
 Treat all files as ASCII text.
 Normally
@@ -748,10 +774,13 @@ utility is compliant with the
 specification.
 .Pp
 The flags
-.Op Fl aDdIiLlNnPpqSsTtwXxy
+.Op Fl AaDdIiLlNnPpqSsTtwXxy
 are extensions to that specification.
 .Sh HISTORY
 A
 .Nm
 command appeared in
 .At v6 .
+.Pp
+libdiff was imported from the Game of Trees version control system and default
+algorithm was changed to Myers for FreeBSD 14.
